Phase 5–8：角色外觀升級 + 職業轉職 + 任務擴充 + 裝備套裝
Phase 5 — 角色外觀升級:
- Player.draw(): 頭部改為實心膚色圓 + 眼白 + 瞳孔 + 高光
- 三種臉部表情：正常/攻擊銳利/受傷X眼
- 身體改為填色圓角矩形 (TOP 顏色)
- 腿部改為 5px 粗線條 (BOTTOM 顏色)
- 靴子改為梯形填色（有鞋尖方向感）
- 新增 drawHelmet(): 弧形頭盔 + 護頰
- 新增 drawCape(): 背後飄逸三角形披風
- 耳環: 頭側彩色小圓點
- 武器升級為填色三角形劍身 + 金色護手 + 深棕劍柄

Phase 6 — 職業轉職系統:
- 新增 Mage.java: 被動MP回復 + 火球術 + 冰凍術
- 新增 Archer.java: 被動10%閃避 + 箭雨 + 鷹眼
- 新增 SkillFireball.java: 飛行火球 + 火焰特效
- 新增 SkillIceNova.java: 範圍冰凍爆炸特效
- 新增 SkillArrowRain.java: 多支箭矢落下特效
- 新增 SkillHawkEye.java: 暫時攻擊加成buff
- VillageMap: 新增轉職所大型建築(三色拱門+旗幟)
- VillageMap: 新增劍士/法師/弓手師傅NPC
- Player: 移除硬編碼auto-Warrior, 改為轉職所NPC手動轉職
- Player: 新增changeJob(), canChangeJob(), addKill(), getTotalKills()
- Player: 弓箭手閃避在takeDamage觸發, 鷹眼在checkAttackHits觸發
- GamePanel: handleDialogueConfirm支援job_*_confirm轉職確認
- GamePanel: openDialogue支援job_*師傅對話
- QuestManager: 新增getJobMasterDialogue(等級/擊殺數/金幣三重條件)
- SaveManager: 支援mage/archer讀取, totalKills存讀

Phase 7 — 任務系統:
- QuestManager擴充轉職任務對話(Lv.10+, 30擊殺, 5000G)

Phase 8 — 裝備套裝系統:
- Equipment: 新增setId, reqLevel欄位
- Equipment: 新增calcSetBonus()套裝加成計算
- 新手布衣套裝(7件, Lv.1+, novice_set)
- 青銅戰士套裝(7件, Lv.10+, bronze_set)
- 翠玉森林套裝(8件含弓/法杖分支, Lv.20+, jade_set)
- ShopPanel: 新增frontierWeaponEntries()青銅套裝商店
- ShopPanel: village武器商新增新手套裝全套
- GamePanel: frontier/icepost武器商自動切換進階清單

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>